apps/dssp-jsp-testing-12-may/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-jsp-testing-12-may
  labels:
    backstage.io/kubernetes-id: dssp-jsp-testing-12-may
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-jsp-testing-12-may
  template:
    metadata:
      labels:
        app: dssp-jsp-testing-12-may
        backstage.io/kubernetes-id: dssp-jsp-testing-12-may
    spec:
      containers:
        - name: dssp-jsp-testing-12-may
          image: chaitanyapandeygspann/dssp-jsp-testing-12-may:1.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
