apps/dssp-jsp-testing-12-may/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-jsp-testing-12-may
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /dssp-jsp-testing-12-may
            pathType: Prefix
            backend:
              service:
                name: dssp-jsp-testing-12-may
                port:
                  number: 80
                targetPort: 8080
